@@ -1,9 +1,9 @@
 package org.deepsymmetry.beatlink;
 
+import org.apiguardian.api.API;
 import org.slf4j.Logger;
 
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 
@@ -11,13 +11,13 @@ import java.util.concurrent.ConcurrentHashMap;
  * Provides the abstract skeleton for all the classes that can be started and stopped in Beat Link, and for which
  * other classes may have a need to know when they start or stop.
  */
+@API(status = API.Status.STABLE)
 public abstract class LifecycleParticipant {
 
     /**
      * Keeps track of the registered device announcement listeners.
      */
-    private final Set<LifecycleListener> lifecycleListeners =
-            Collections.newSetFromMap(new ConcurrentHashMap<LifecycleListener, Boolean>());
+    private final Set<LifecycleListener> lifecycleListeners = Collections.newSetFromMap(new ConcurrentHashMap<>());
 
     /**
      * <p>Adds the specified life cycle listener to receive announcements when the component starts and stops.
@@ -30,6 +30,7 @@ public abstract class LifecycleParticipant {
      *
      * @param listener the device announcement listener to add
      */
+    @API(status = API.Status.STABLE)
     public void addLifecycleListener(LifecycleListener listener) {
         if (listener != null) {
             lifecycleListeners.add(listener);
@@ -43,6 +44,7 @@ public abstract class LifecycleParticipant {
      *
      * @param listener the life cycle listener to remove
      */
+    @API(status = API.Status.STABLE)
     public void removeLifecycleListener(LifecycleListener listener) {
         if (listener != null) {
             lifecycleListeners.remove(listener);
@@ -54,10 +56,10 @@ public abstract class LifecycleParticipant {
      *
      * @return the currently registered lifecycle listeners
      */
-    @SuppressWarnings("WeakerAccess")
+    @API(status = API.Status.STABLE)
     public Set<LifecycleListener> getLifecycleListeners() {
         // Make a copy so the caller gets an immutable snapshot of the current moment in time.
-        return Collections.unmodifiableSet(new HashSet<LifecycleListener>(lifecycleListeners));
+        return Set.copyOf(lifecycleListeners);
     }
 
     /**
@@ -67,19 +69,16 @@ public abstract class LifecycleParticipant {
      * @param starting will be {@code true} if the DeviceFinder is starting, {@code false} if it is stopping.
      */
     protected void deliverLifecycleAnnouncement(final Logger logger, final boolean starting) {
-        new Thread(new Runnable() {
-            @Override
-            public void run() {
-                for (final LifecycleListener listener : getLifecycleListeners()) {
-                    try {
-                        if (starting) {
-                            listener.started(LifecycleParticipant.this);
-                        } else {
-                            listener.stopped(LifecycleParticipant.this);
-                        }
-                    } catch (Throwable t) {
-                        logger.warn("Problem delivering lifecycle announcement to listener", t);
+        new Thread(() -> {
+            for (final LifecycleListener listener : getLifecycleListeners()) {
+                try {
+                    if (starting) {
+                        listener.started(LifecycleParticipant.this);
+                    } else {
+                        listener.stopped(LifecycleParticipant.this);
                     }
+                } catch (Throwable t) {
+                    logger.warn("Problem delivering lifecycle announcement to listener", t);
                 }
             }
         }, "Lifecycle announcement delivery").start();
@@ -90,7 +89,7 @@ public abstract class LifecycleParticipant {
      *
      * @return the component has started successfully and is ready to perform any service it offers.
      */
-    @SuppressWarnings("WeakerAccess")
+    @API(status = API.Status.STABLE)
     abstract public boolean isRunning();
 
     /**
